<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollGraph"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnLineGraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/text_line_graph" />

        <Button
            android:id="@+id/btnLineGraphWithRegion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/text_line_graph_with_region" />

        <Button
            android:id="@+id/btnCompareGraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/text_line_compare_graph" />

        <Button
            android:id="@+id/btnRadarGraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/text_radar_graph" />

        <Button
            android:id="@+id/btnCurveGraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/text_curve_graph" />

        <Button
            android:id="@+id/btnCurveGraphWithRegion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/text_curve_graph_with_region" />

        <Button
            android:id="@+id/btnCurveCompareGraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/text_curve_compare_graph" />

        <Button
            android:id="@+id/btnCircleGraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/text_line_circle_graph" />

        <Button
            android:id="@+id/btnPieGraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/text_line_pie_graph" />

        <Button
            android:id="@+id/btnBubbleGraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/text_bubble_graph" />

        <Button
            android:id="@+id/btnScatterGraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/text_scatter_graph" />

        <Button
            android:id="@+id/btnBarGraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/text_bar_graph" />
    </LinearLayout>

</ScrollView>